# speakerscribe

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _runs.jsonl  pyproject.toml  speakerscribe_colab.ipynb
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
notebooks/: notebook_speakerscribe.ipynb
scripts/: check_notebook_parity.py
speakerscribe/: __init__.py  __main__.py  audio.py  cli.py  config.py  diarization.py  estimates.py  evaluate.py  io_utils.py  logging_config.py  maintenance.py  output.py  persistence.py  pipeline.py  quality.py  transcription.py
tests/: conftest.py  fakes.py  test_audio.py  test_cli.py  test_config.py  test_diarization.py  test_estimates.py  test_evaluate.py  test_file_signature.py  test_io_utils.py  test_maintenance.py  test_output.py  test_persistence.py  test_pipeline.py  test_pipeline_integration.py  test_quality.py  test_quality_degradation.py  test_speaker_assignment.py  test_transcription.py
