[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speakerscribe"
version = "0.3.0"
description = "Speech-to-text with speaker diarization — Whisper + pyannote.audio, optimized for Google Colab Free Tier (T4 GPU)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Néstor Enrique Forero Herrera", email = "enrique.economista@gmail.com"},
]

keywords = ["speech-to-text", "whisper", "diarization", "pyannote", "asr", "transcription", "speaker-diarization", "faster-whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "faster-whisper>=1.2.1,<2.0",
    "pyannote.audio>=4.0,<5.0",
    "pydantic>=2.5,<3.0",
    "loguru>=0.7,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<16.0",
]

[project.optional-dependencies]
bench = [
    "jiwer>=3.0,<5.0",
    "pyannote.metrics>=3.2,<4.0",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-mock>=3.12", "ruff>=0.9.0", "mypy>=1.10"]

[project.scripts]
speakerscribe = "speakerscribe.cli:app"

[project.urls]
Homepage      = "https://github.com/EnriqueForero/speakerscribe"
Repository    = "https://github.com/EnriqueForero/speakerscribe"
"Bug Tracker" = "https://github.com/EnriqueForero/speakerscribe/issues"
Documentation = "https://github.com/EnriqueForero/speakerscribe#readme"
Changelog     = "https://github.com/EnriqueForero/speakerscribe/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["speakerscribe*"]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.setuptools.package-data]
"speakerscribe" = ["py.typed"]


# ═══════════════════════════════════════════════════════════
# Pytest
# ═══════════════════════════════════════════════════════════
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short --strict-markers --cov=speakerscribe --cov-report=term-missing --cov-report=xml --cov-fail-under=45"
markers = [
    "integration: end-to-end tests that download models / need ffmpeg (CI: scheduled job)",
    "gpu: tests requiring CUDA",
    "slow: long-running tests excluded from the default run",
]


# ═══════════════════════════════════════════════════════════
# Coverage.py
# ═══════════════════════════════════════════════════════════
[tool.coverage.run]
branch = true
source = ["speakerscribe"]
omit = [
    "*/tests/*",
    "*/dashboard.py",
    "*/visualizacion*.py",
    "*/visualizacion_interactiva.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
precision    = 1
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
]


# ═══════════════════════════════════════════════════════════
# Ruff (linter + formatter)
# ═══════════════════════════════════════════════════════════
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "N806",
    "SIM108",
    "UP007",
    "UP045",
    "RUF001",
    "RUF002",
    "RUF003",
    "N817",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"__init__.py" = ["F401"]
"tests/*" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["speakerscribe"]

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"

[tool.mypy]
python_version         = "3.10"
warn_redundant_casts   = true
warn_unused_ignores    = true
no_implicit_optional   = true
check_untyped_defs     = true

[[tool.mypy.overrides]]
# Heavy/optional runtime deps without stubs — imported lazily by design.
module = [
    "faster_whisper.*",
    "pyannote.*",
    "torch.*",
    "google.colab.*",
    "jiwer.*",
]
ignore_missing_imports = true
